[package]
name = "iso8601-duration-serde"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/windtail/iso8601-duration-serde"
license = "MIT"
description = "A Rust library for serializing and deserializing time::Duration using the ISO 8601 format."

[dependencies]
iso8601-duration = { version = "0.2", features = ["serde"] }
serde = "1"
time = "0.3"
time-core = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

